fix: vertical align

--- a/desafio02/css/style.css
+++ b/desafio02/css/style.css
@@ -70,6 +70,7 @@ body{
 }
 
 .card{
+  vertical-align: middle;
   display: inline-block;
   margin: 0 25px 57px 25px;
   cursor: pointer;
@@ -96,6 +97,7 @@ body{
 }
 
 .footer_description{
+  vertical-align: middle;
   font-size: 2rem;
   display: inline-block;
   margin-right: 1.6rem;
@@ -106,6 +108,7 @@ body{
 }
 
 .footer_list_item{
+  vertical-align: middle;
   display: inline-block;
 }
 
